--- a/Frontend/appsettings.json
+++ b/Frontend/appsettings.json
@@ -7,7 +7,16 @@
   "AllowedHosts": "*",
 
   "SecretSettings": {
-    "SecretString": ""
+    "SecretString": "S3cr3tStringUs3dT0SignJWTT0k3ns"
+  },
+  "MongoDbAppSettings": {
+    "MongoDatabaseName": "Projects",
+    "MongoUserDatabaseName": "Users",
+    "MongoAuthDatabaseName": "admin",
+    "MongoUsername": "Admin",
+    "MongoPassword": "secure123",
+    "MongoPort": "27017",
+    "MongoHost": "localhost"
   },
   "CouchDbSettings": {
     "Username": "",
