--- a/Frontend/ClientApp/package.json
+++ b/Frontend/ClientApp/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "8.2.9",
     "@angular/platform-server": "8.2.9",
     "@angular/router": "8.2.9",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@nguniversal/module-map-ngfactory-loader": "6.0.0",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
