--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -15,11 +15,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
-    <PackageReference Include="MongoDB.Bson" Version="2.9.2" />
-    <PackageReference Include="MongoDB.Driver" Version="2.9.2" />
-    <PackageReference Include="MongoDB.Driver.Core" Version="2.9.2" />
-    <PackageReference Include="MyCouch" Version="7.1.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
+    <PackageReference Include="MongoDB.Bson" Version="2.9.3" />
+    <PackageReference Include="MongoDB.Driver" Version="2.9.3" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.9.3" />
+    <PackageReference Include="SSLLabsApiWrapper" Version="1.0.8" />
   </ItemGroup>
 
   <ItemGroup>
