--- a/Frontend/ClientApp/package.json
+++ b/Frontend/ClientApp/package.json
@@ -22,30 +22,30 @@
     "@angular/platform-browser-dynamic": "8.2.9",
     "@angular/platform-server": "8.2.9",
     "@angular/router": "8.2.9",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "@nguniversal/module-map-ngfactory-loader": "6.0.0",
     "aspnet-prerendering": "^3.0.1",
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.5.4",
+    "bootstrap": "^4.4.1",
+    "core-js": "^2.6.11",
     "jquery": "^3.4.1",
-    "ngx-cookie-service": "^2.2.0",
-    "popper.js": "^1.14.3",
-    "rxjs": "^6.5.3",
-    "rxjs-compat": "^6.5.3",
+    "ngx-cookie-service": "^2.3.0",
+    "popper.js": "^1.16.0",
+    "rxjs": "^6.5.4",
+    "rxjs-compat": "^6.5.4",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.8",
-    "@angular/cli": "~8.3.8",
+    "@angular-devkit/build-angular": "^0.803.21",
+    "@angular/cli": "^8.3.21",
     "@angular/compiler-cli": "8.2.9",
-    "@angular/language-service": "^8.2.9",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular/language-service": "^8.2.14",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.0.0",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
